content/themes/casper/assets/css/screen.css
/* ... */
/* ==========================================================================
   End of file. Animations should be the last thing here. Do not add stuff
   below this point, or it will probably fuck everything up.
   ========================================================================== */


/*IPHONE 6 styles*/

@media only screen
and (min-device-width : 375px)
and (max-device-width : 667px) {
  .toggle-menu {
    margin-top: 3px;
  }

}

@media only screen and (max-width: 990px) {
  .mobile-nav-logo {
    top: -4px !important;
  }
}

@media only screen and (max-width: 768px) {

  .black-bg{
    background-color: black;
  }

  #mailinglist{
    text-align: center;
    padding-bottom: 140px;
  }
  #mailinglist p{
    padding-top: 20px;
  }
  #mailinglist .subtitle{
    text-align: center;
    margin-top: -20px;
  }
  .buttons{
    text-align:center;
  }
  .step .number{
    display: block;
  }
  .hovalin-neck {
    width: 100%;
    max-width: 50px;
    display: block;
    margin: 0 auto;
  }

  .hovalin-top{
    position: relative;
    top: 50px;
  }

  .hovalin-bottom {
    position: relative;
    top: 90px;
  }

  .hovalin-face{
    position: relative;
    top: 60px;
  }

  .mobile-nav-logo {
    float: left;
    font-size: 30px;
    color: white;
    font-weight: 900;
    position: absolute;
    left: 20px;
  }
}

/* NAV FIX */
@media only screen and (min-width: 990px) {
  .push-body-toleft {
    left: 0px !important;
    position: relative !important;
  }
}

